log
Wed 12 Apr 2023 07:26:28 PM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:9: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   59 |     mapa->buckets[i]->key = NULL;
      |     ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5410335
Wed 12 Apr 2023 07:33:09 PM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:64:18: error: ‘*_1 + _3’ may be used uninitialized [-Werror=maybe-uninitialized]
   64 |     mapa->buckets[i]->value = (void*)malloc(sizeof(void));
      |     ~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
2d7c4e2
Wed 12 Apr 2023 07:42:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:64:18: error: ‘*_1 + _3’ may be used uninitialized [-Werror=maybe-uninitialized]
   64 |     mapa->buckets[i]->value = (void*)malloc(sizeof(void));
      |     ~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
1aa8fd9
Wed 12 Apr 2023 07:42:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
95a2148
Wed 12 Apr 2023 07:43:31 PM UTC: 
 hashmap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  0|6
total_score: 0/70
292ff29
Wed 12 Apr 2023 07:50:04 PM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:16: error: ‘*(Pair **)malloc (8)’ may be used uninitialized [-Werror=maybe-uninitialized]
   62 |   mapa->buckets[0]->value = (void*)malloc(sizeof(void));
      |   ~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
ab6e216
Wed 12 Apr 2023 07:50:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:16: error: ‘*(Pair **)malloc (8)’ may be used uninitialized [-Werror=maybe-uninitialized]
   62 |   mapa->buckets[0]->value = (void*)malloc(sizeof(void*));
      |   ~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
8a94368
Wed 12 Apr 2023 08:01:25 PM UTC: 
 hashmap.c | 13 ++-----------
 1 file changed, 2 insertions(+), 11 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:54: error: ‘*mapa.capacity’ may be used uninitialized [-Werror=maybe-uninitialized]
   59 |   mapa->buckets = (Pair**)malloc(sizeof(Pair*) * mapa->capacity);
      |                                                  ~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f2e5634
Wed 12 Apr 2023 08:01:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c232e77
Wed 12 Apr 2023 09:00:28 PM UTC: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:8: error: unused variable ‘i’ [-Werror=unused-variable]
   45 |   long i = 0;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
bb2ba0e
